--- a/pages/index.html
+++ b/pages/index.html
@@ -8,19 +8,21 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-    <section class="tech">
-        <h2>Used technologies</h2>
-        <p>Fill the gaps in your competencies by setting up a remote IT team. We will find the best experts, so you could arrange everything around. You will get a perfect match both in skills and cultural fit.</p>
-        <div class="tech-sar">
+    <main>
+        <section class="tech">
+         <h2 class="techpav">Used technologies</h2>
+         <p class="techtext">Fill the gaps in your competencies by setting up a remote IT team. We will find the best experts for you and arrange everything around it. You will get a perfect match both in skills and cultural fit.</p>
+         <div class="tech-sar">
             <div class="box1">Title of the first technology</div>
-            <div class="box">Second technology</div>
-            <div class="box">Third technology</div>
-            <div class="box">Fourth technology</div>
-            <div class="box">Fifth technology</div>
-        </div>
-    </section>
+            <div class="box2">Second technology</div>
+            <div class="box3">Third technology</div>
+            <div class="box4">Fourth technology</div>
+            <div class="box5">Fifth technology</div>
+            <div class="techlinija"></div>
+         </div>
+       </section>
 
-    <section class="industrijos">
+     <section class="industrijos">
         <h2 class="indpagpav">Industries</h2>
         <div class="indus">
             <div class="ind1">
@@ -35,14 +37,14 @@
                 <hr class="indlinija">
                 <p class="indtekstas">Fill the gaps in your competencies by setting up a remote IT team. We will find the best experts for you and arrange everything around it. You will get a perfect match both in skills and cultural fit.</p>
             </div>
-            <div class="ind3">
+             <div class="ind3">
                 <img class="logotipas" src="../img/Icon_4.png" alt="">
                 <h3 class="indpav3">CRM systems</h3>
                 <hr class="indlinija">
                 <p class="indtekstas">Fill the gaps in your competencies by setting up a remote IT team. We will find the best experts for you and arrange everything around it. You will get a perfect match both in skills and cultural fit.</p>
             </div>
-        </div>
-    </section>
+         </div>
+     </section>
 
     <section class="kontaktai">
         <h2 class="kontpav">Get in touch with us</h2>
@@ -55,11 +57,12 @@
                 <input type="text" placeholder="Enter your Full Name" required>
                 <input type="email" placeholder="Enter your Email" required>
                 <input type="telefonas" placeholder="Enter your Phone Number" required>
-                <textarea placeholder="Describe your project"></textarea>
-                <input type="filas" accept=".pdf,.doc,.docx,.png,.jpg">
+                <input type="text1" placeholder="Describe your project"></input>
+                <input type="filas" placeholder="Upload file (maxsize is 30 MB)" accept=".pdf,.doc,.docx,.png,.jpg">
                 <button type="pateikti">Submit</button>
             </form>
         </div>
     </section>
+    </main>
 </body>
 </html>
