Added folder structure

--- a/pages/about.html
+++ b/pages/about.html
@@ -27,8 +27,10 @@
                 </div>
                 <div class="navlin1"></div>
                 <div class="kalba">
+                    <div class="kalbosftdiv">
+                       <img class="kalbosft" src="../img/arrow-square-down2.png" alt="">
+                    </div>
                     <p class="kalbtext">EN</p>
-                    <img class="kalbosft" src="../img/arrow-square-down2.png" alt="">
                 </div>
                 <button class="navmygt">
                     <p class="cu">CONTACT US</p>
@@ -41,8 +43,27 @@
     </header>
 
     <main>
+        <section class="mmneubar">
+            <div class="mmlinijos">
+                <img class="mmpick" src="../img/menu.png" alt="">
+                <div class="mmblock"></div>
+            </div>
+            <img class="mrlogo" src="../img/mrlogotips.png" alt="">
+            <div class="ponasrodykle">
+                <img class="mrrod" src="../img/mygtrodykle.png" alt="">
+                <div class="mrblock"></div>
+            </div>
+        </section>
         <section class="kasmes">
-            <p class="kasmestext">Who we are</p>
+            <div class="kasmestext">Who we are</div>
+            <div class="mobtextt">
+                <div class="kasmestextm">What are our goals?</div>
+                <p class="tekstas11">
+                    IT Support Group has worked with more than 200 businesses (and counting) in the past 10 years and we offer our experience with the best expert talent pool in the industry to fulfill all your application development needs.
+                   <br><br>
+                    We deploy best practices, proven development methodologies, and time-tested optimum delivery models for developing and building applications on a fixed time, fixed cost basis.
+                 </p>
+            </div>
             <div class="visiblok">
                 <div class="stat-grid">
                     <div class="boxx1">
@@ -62,7 +83,7 @@
                     </div>
                     <div class="boxx4">
                         <p class="numeriuks4">8-10</p>
-                        <p class="tekstuks4">weeks project take with development</p>
+                        <p class="tekstuks4">weeks project take with <br> development</p>
                         <div class="blokelis4"></div>
                     </div>
                     <p class="tekstas1">
@@ -115,12 +136,12 @@
             
         </section>
         <section class="ourteam">
-            <p class="ot">Our Team</p>
+            <div class="ot">Our Team</div>
             <p class="ottext">
                 We started our way with the idea of creating innovative products, and we have been following this trend since 2013
                 and continue to build technological solutions for our customers.
             </p>
-            <div class="otimg"></div>
+            <img class="otimg" src="../img/zmogeliukai.png" alt=""></img>
             <div class="otblokai">
                 <div class="honesty">
                     <p class="hnr">[ 01 ]</p>
