--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                               <div class="elipse2"></div>
                               <div class="elipse1"></div>
                             </div>
-                            <div class="t1">Title of the first technology</div>
+                            <p class="t1">Title of the first technology</p>
                     </div>
                     <div class="javalogo">
                             <div class="techblock">
@@ -32,32 +32,60 @@
                         
                 </div>
                 <div class="box2">
-                     <div class="taskiuks2"></div>
-                    <div class="t2">Second technology description</div>
+                    <div class="taskiuks2"></div>
+                    <p class="t2">Second technology description</p>
                 </div>
                 <div class="box3">
                     <div class="taskiuks3"></div>
-                    <div class="t3">Third technology description</div>
+                    <p class="t3">Third technology description</p>
                 </div>
                 <div class="box4">
                     <div class="taskiuks4"></div>
-                    <div class="t4">Fourth technology description</div>
+                    <p class="t4">Fourth technology description</p>
                 </div>
                 <div class="box5">
                     <div class="taskiuks5"></div>
-                    <p class="t5">Fifth technology description</div>
+                    <p class="t5">Fifth technology description</p>
                 </div>
                 <div class="box6">
                     <div class="taskiuks6"></div>
-                    <div class="t6">sixth technology description</div>
+                    <p class="t6">Sixth technology description</div>
                 </div>
                 <div class="box7">
                     <div class="taskiuks7"></div>
-                    <div class="t7">seventh technology description</div>
+                    <p class="t7">Seventh technology description</div>
                  </div>
                 <div class="box8">
                     <div class="taskiuks8"></div>
-                    <div class="t8">eighth technology description</div>
+                    <p class="t8">Eighth technology description</div>
+                </div>
+                <div class="box1m">
+                    <div class="taskiuks1m"></div>
+                    <div class="t1m">Title of the first technology</div>
+                </div>
+                <div class="box2m">
+                    <div class="taskiuks2m"></div>
+                    <div class="t2m">Title of the first technology</div>
+                </div>
+                <div class="box3m">
+                    <div class="taskiuks3m"></div>
+                    <div class="t3m">Title of the first technology</div>
+                </div>
+                <div class="box4m">
+                    <div class="taskiuks4m"></div>
+                    <div class="t4m">Title of the first technology</div>
+                </div>
+                <div class="box5m">
+                    <div class="taskiuks5m"></div>
+                    <div class="t5m">Title of the first technology</div>
+                </div>
+                <div class="box6m">
+                    <div class="taskiuks6m"></div>
+                    <div class="t6m">Title of the first technology</div>
+                </div>
+                <div class="box7m">
+                    <div class="taskiuks7m"></div>
+                    <div class="t7m">Title of the first technology</div>
                 </div>
             </div>
 
@@ -180,14 +208,13 @@
                     <div class="ui">UI/UX Design</div>
                     <div class="sd">Software Development</div>
                 </div>
-                <div class="info">
-                    <div class="info1">Development by IT Support Group.</div>
-                    <div class="info2" >Data Privacy.</div>
-                    <div class="info3">© 2023 IT Support Group</div>
-                </div>
-
             </div>
             <div class="gallinija2"></div>
+            <div class="info">
+                <div class="info1">Development by IT Support Group.</div>
+                <div class="info2" >Data Privacy.</div>
+                <div class="info3">© 2023 IT Support Group</div>
+            </div>
         </section>
     </footer>
 </body>
