--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/about.css">
-    <link rel="stylesheet" href="style.css/about2.css">
+    <link rel="stylesheet" href="../css/about2.css">
 </head>
 <body>
     <header>
