--- a/pages/about.html
+++ b/pages/about.html
@@ -309,6 +309,7 @@
             
         </div>
         </section>
+        <footer>
         <section class="section6">
         <div class="line123"></div>
         <div class="container6">
