nebezinau ka rasyt

--- a/pages/about.html
+++ b/pages/about.html
@@ -168,7 +168,7 @@
             <div class="container20">
             <div class="container3">
             <div class="timeline">
-                <header>IT Support Group through the years</header>
+                <div class="header">IT Support Group through the years</div>
              <p class="container1p">We started our way with the idea of creating innovative products, and we have been following this trend since 2013 and continue to build technological solutions for our customers.</p>
             </div>
             <div class="block1">
