--- a/index.html
+++ b/index.html
@@ -130,23 +130,23 @@
             </button>
             <div class="kont">
                 <form>
-                    <div>
+                    <div class="gtblock1">
                         <input type="text" placeholder="Enter your Full Name" required>
                         <div class="linija1"></div>
                     </div>
-                    <div>
+                    <div class="gtblock2">
                         <input type="email" placeholder="Enter your Email" required>
                         <div class="linija2"></div>
                     </div>
-                    <div>
+                    <div class="gtblock3">
                         <input type="telefonas" placeholder="Enter your Phone Number" required>
                         <div class="linija3"></div>
                     </div>
-                    <div>
+                    <div class="gtblock4">
                         <input type="apibudinimas" placeholder="Describe your project"></input>
                         <div class="linija4"></div>
                     </div>
-                    <div>
+                    <div class="gtblock5">
                         <input type="filas" placeholder="Upload file (max file size is 30 MB)" accept=".pdf,.doc,.docx,.png,.jpg">
                         <div class="linija5"></div>
                     </div>
